# visual_servo

./: .gitignore  camera_data.xml  result_eye_in_hand.xml  robotpose.xml
src/: camera_cali_result
src/aruco_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/aruco_test/src/: main.cpp
src/hand_eye_calibration/: .~lock.siasun 手眼标定流程.docx#  .~lock.siasun 手眼标定流程.odt#  CMakeLists.txt  Readme  gazebo_sim.txt  package.xml  siasun 手眼标定流程.docx  siasun 手眼标定流程.odt
src/hand_eye_calibration/include/hand_eye_calibration/: calibrationbase.h
src/hand_eye_calibration/src/: add_kinect2_node.cpp  auto_getdata_node.cpp  calibrationbase.cpp  eyeinhand_calib_node.cpp  eyetohand_calib_node.cpp  generate_fake_data_node.cpp  get_robot_jointstate_node.cpp  get_validation_data_node.cpp  getdata_node.cpp  mj_extrinsic.cpp  move_sortjoint_node.cpp  planningScene_node.cpp  single_jointcollision_check_node.cpp  xml2txt_node.cpp
src/jaco_pos_move_real/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/jaco_pos_move_real/src/: main.cpp
src/jaco_vel_move_real/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/jaco_vel_move_real/src/: main.cpp  opencv_test_01.cpp
src/kinova-ros-master/kinova_bringup/launch/: kinova_robot.launch
src/kinova-ros-master/kinova_description/launch/: display_kinova_robot.launch
src/kinova-ros-master/kinova_description/urdf/: j2n6s300_standalone.urdf  m1n6s300_standalone.urdf
src/kinova-ros-master/kinova_moveit/kinova_arm_moveit_demo/src/: motion_plan.cpp  pick_place.cpp  test_accuracy.cpp
src/kinova-ros-master/kinova_moveit/robot_configs/m1n6s300_moveit_config/config/: kinematics.yaml
src/pkgtest01/: CMakeLists.txt  package.xml
src/pkgtest01/src/: main.cpp
src/qr_code_location/: CMakeLists.txt  CMakeLists.txt.user.18  package.xml
src/qr_code_location/src/: QR_code_generation.cpp  QR_code_generation.txt  camera_calibration.cpp  detect_qr.cpp  gen_qr.cpp  image_capture.cpp  image_capture_to_ros.cpp  pose_estimation_by_QRcode.cpp  qr_detect.cpp
src/trac_ik_test/: CMakeLists.txt  package.xml
src/velocity_servo/: CMakeLists.txt  package.xml
src/velocity_servo/src/: key_def.h  main.cpp
